# aio-microservice

./: .copier-answers.yml  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-main.yaml  ci-pr.yaml  ci.yaml  docs.yaml  lint.yaml  pr.yaml  prepare-release.yaml  publish-pypi.yaml  release.yaml  test.yaml
aio_microservice/: __init__.py  __main__.py  __version__.py  http.py  service.py  types.py
aio_microservice/amqp/: __init__.py  asyncapi.py  extension.py  testing.py
aio_microservice/core/: abc.py  logging.py  openapi.py  service.py  testing.py
aio_microservice/graphql/: __init__.py  extension.py
aio_microservice/http_cors/: __init__.py  extension.py
aio_microservice/prometheus/: __init__.py  extension.py
aio_microservice/s3/: __init__.py  extension.py
aio_microservice/scheduler/: __init__.py  extension.py
docs/: conf.py  index.md
examples/: amqp_instance_publisher.py  amqp_middleware.py  amqp_service.py  amqp_simple.py  composed_base_class.py  custom_extensions.py  custom_settings.py  dev.py  extend_extensions.py  graphql_authentication.py  graphql_simple.py  http_controller.py  http_cors.py  http_events.py  http_service.py  http_simple.py  lifecycle_hooks.py  metadata.py  minimal.py  prometheus_custom_metrics.py  prometheus_simple.py  readiness_liveness_probes.py  s3_simple.py  schedule_service.py  scheduler.py  startup_message.py
tests/: conftest.py  test_import.py
tests/amqp/: test_amqp.py  test_amqp_asyncapi.py  test_amqp_test_broker.py  test_amqp_test_client.py
tests/core/: test_cli.py  test_custom_base_service.py  test_lifecycle_hooks.py  test_readiness_liveness_probe.py  test_settings.py  test_startup_message.py
tests/graphql/: test_graphql.py  test_graphql_test_client.py
tests/http/: test_http.py  test_http_openapi.py  test_http_test_client.py
tests/http_cors/: test_http_cors.py
tests/prometheus/: test_prometheus.py
tests/s3/: test_s3.py
tests/scheduler/: test_scheduler.py
